Add ruff to external server quality tools.

--- a/components/notifier/Dockerfile
+++ b/components/notifier/Dockerfile
@@ -2,14 +2,16 @@ FROM python:3.11.3-alpine3.17 AS compile-image
 
 WORKDIR /home/notifier
 
+RUN apk add --no-cache gcc=12.2.1_git20220924-r4 make=4.3-r1 libc-dev=0.7.2-r3 libffi-dev=3.4.4-r0
+# hadolint ignore=DL3059
 RUN python -m venv venv
 ENV PATH="/home/notifier/venv/bin:$PATH"
 COPY notifier/requirements/requirements.txt /requirements.txt
-RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
+RUN pip install --no-cache-dir --require-hashes --use-pep517 -r /requirements.txt
 COPY shared_data_model /home/shared_data_model/
 COPY shared_server_code /home/shared_server_code/
 COPY notifier/requirements/requirements-internal.txt /requirements-internal.txt
-RUN pip install --no-cache-dir -r /requirements-internal.txt
+RUN pip install --no-cache-dir --use-pep517 -r /requirements-internal.txt
 
 FROM python:3.11.3-alpine3.17
 
