--- a/components/notifier/.dockerignore
+++ b/components/notifier/.dockerignore
@@ -1,17 +1,19 @@
 **/__pycache__
+**/.DS_Store
+**/.vscode
 *.egg-info
 .coverage*
 .dockerignore
 .idea
-.mypy_cache
+.*_cache
+.pipx
 .pylintrc
-.vscode
+.venv
 .vulture_ignore_list.py
 build/
 ci/
 Dockerfile
 README.md
-requirements-dev.*
-requirements*.in
+requirements/requirements-dev.txt
 tests/
 venv
