--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - FRONTEND_PORT=${FRONTEND_PORT:-5000}
       - EXTERNAL_SERVER_HOST=${EXTERNAL_SERVER_HOST:-external_server}
       - EXTERNAL_SERVER_PORT=${EXTERNAL_SERVER_PORT:-5001}
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - external_server
       - frontend
@@ -18,6 +20,8 @@ services:
     image: ictu/quality-time_frontend:${QUALITY_TIME_VERSION}
     environment:
       - FRONTEND_PORT=${FRONTEND_PORT:-5000}
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - external_server
     cap_drop:
@@ -31,6 +35,8 @@ services:
       - COLLECTOR_MEASUREMENT_LIMIT=${COLLECTOR_MEASUREMENT_LIMIT:-30}
       - COLLECTOR_SLEEP_DURATION=${COLLECTOR_SLEEP_DURATION:-20}
       - COLLECTOR_LOG_LEVEL=${COLLECTOR_LOG_LEVEL:-WARNING}
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - internal_server
     cap_drop:
@@ -42,6 +48,8 @@ services:
       - INTERNAL_SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
       - NOTIFIER_SLEEP_DURATION=${NOTIFIER_SLEEP_DURATION:-60}
       - NOTIFIER_LOG_LEVEL=${NOTIFIER_LOG_LEVEL:-WARNING}
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - internal_server
     cap_drop:
@@ -62,6 +70,8 @@ services:
       - FORWARD_AUTH_HEADER=${FORWARD_AUTH_HEADER:-X-Forwarded-User}
       - RENDERER_HOST=${RENDERER_HOST:-renderer}
       - RENDERER_PORT=${RENDERER_PORT:-9000}
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - database
     cap_drop:
@@ -73,6 +83,8 @@ services:
       - INTERNAL_SERVER_LOG_LEVEL=${INTERNAL_SERVER_LOG_LEVEL:-WARNING}
       - DATABASE_URL=${DATABASE_URL:-mongodb://root:root@database:27017}
       - LOAD_EXAMPLE_REPORTS=${LOAD_EXAMPLE_REPORTS:-True}
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - database
     cap_drop:
@@ -85,6 +97,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME:-root}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD:-root}
     volumes:
+      - "/etc/localtime:/etc/localtime:ro"
       - "dbdata:/data/db"
   renderer:
     image: ictu/quality-time_renderer:${QUALITY_TIME_VERSION}
@@ -93,5 +106,7 @@ services:
       - PROXY_PORT=${PROXY_PORT:-80}
       - LC_ALL=${LC_ALL:-en_GB.UTF-8}  # Set the date format in the PDF export to DD-MM-YYYY
       - TZ=${TZ:-Europe/Amsterdam}  # Make the PDF export use the correct timezone
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
 volumes:
   dbdata:
