--- a/components/notifier/pyproject.toml
+++ b/components/notifier/pyproject.toml
@@ -19,6 +19,7 @@ dev = [
 tools = [
     "bandit==1.7.5",
     "black==23.3.0",
+    "isort==5.12.0",
     "mypy==1.3.0",
     "pip-audit==2.5.6",
     "ruff==0.0.270",
@@ -28,6 +29,11 @@ tools = [
 
 [tool.black]
 line-length = 120
+
+[tool.isort]
+line_length = 120
+profile = "black"
+py_version=311
 
 [tool.mypy]
 ignore_missing_imports = false
