--- a/components/collector/pyproject.toml
+++ b/components/collector/pyproject.toml
@@ -28,7 +28,7 @@ tools = [
     "black==23.3.0",
     "mypy==1.3.0",
     "pip-audit==2.5.6",
-    "ruff==0.0.265",
+    "ruff==0.0.270",
     "safety==2.3.5",
     "vulture==2.7"
 ]
@@ -53,6 +53,7 @@ ignore_missing_imports = true
 [tool.ruff]
 target-version = "py311"
 line-length = 120
+src = ["src"]
 select = ["ALL"]
 ignore = [
     "ANN001",  # https://beta.ruff.rs/docs/rules/missing-type-function-argument/ - too many untyped arguments atm to turn this rule on
@@ -66,7 +67,6 @@ ignore = [
     "D203",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
     "D213",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
     "FBT",     # https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
-    "I001",    # https://beta.ruff.rs/docs/rules/unsorted-imports/ - (probably) because ruff is run with pipx it cann't differentiate between dependencies and modules
     "PD",      # https://beta.ruff.rs/docs/rules/#pandas-vet-pd - pandas isn't used
     "PT",      # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt - pytest isn't used
 ]
