--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -13,20 +13,18 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "coverage==7.2.7",
-    "pep8-naming==0.13.3",
     "pip==23.1.2",
     "pipx==1.2.0",
     "pip-tools==6.13.0",  # To add hashes to requirements
     "pydantic==1.10.8",  # Needed for importing the data model in the tests from the shared data model component
-    "pylint==2.17.4",
     "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
 ]
 tools = [
     "black==23.3.0",
     "bandit==1.7.5",
-    "dlint==0.14.1",
     "mypy==1.3.0",
     "pip-audit==2.5.6",
+    "ruff==0.0.270",
     "safety==2.3.5",
     "vulture==2.7"
 ]
@@ -41,3 +39,32 @@ warn_redundant_casts = true
 warn_return_any = true
 warn_unreachable = true
 warn_unused_ignores = true
+
+[tool.ruff]
+target-version = "py311"
+line-length = 120
+select = ["ALL"]
+src = ["src"]
+ignore = [
+    "ANN101",  # https://beta.ruff.rs/docs/rules/missing-type-self/ - type checkers can infer the type of `self`, so annotating it is superfluous
+    "D203",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
+    "D213",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
+    "FBT",     # https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
+    "PD",      # https://beta.ruff.rs/docs/rules/#pandas-vet-pd - pandas isn't used
+    "PT",      # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt - pytest isn't used
+]
+
+[tool.ruff.per-file-ignores]
+".vulture_ignore_list.py" = ["ALL"]
+"__init__.py" = [
+    "D104",  # https://beta.ruff.rs/docs/rules/#pydocstyle-d - don't require doc strings in __init__.py files
+]
+"src/conf.py" = [
+    "INP001",  # https://beta.ruff.rs/docs/rules/implicit-namespace-package/ - false positive because this is a configuration file
+]
+"src/create_reference_md.py" = [
+    "INP001",  # https://beta.ruff.rs/docs/rules/implicit-namespace-package/ - false positive because this is a script
+]
+"tests/**/*.py" = [
+    "ANN201",  # https://beta.ruff.rs/docs/rules/missing-return-type-undocumented-public-function/ - don't require test functions to have return types
+]
