Squashed commits of feature:
- Adds mongomock to shared server code.
- Adds call to database to fetch reports.
- Adds check in __eq__ to see if instance of self
- Inserts measurment into database instead of posting to internal server
- Moves create_report to fixtures.
- Moves database code to shared.
- Notifier uses shared code
- Moves database code to shared.
- Removes duplicate
- Moves to new modules
- Sorting of imports
- Renames database method
- Changes import for collector
- Consolidates tests for measurements
- Removes superfluous code
- Use internal_server methods
- Removes dead code.
- Tests get method.
- Tests get method.
- Tests fixtures
- Fixes quality checks.
- Adds coverage on shared_data

--- a/components/shared_server_code/pyproject.toml
+++ b/components/shared_server_code/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "coverage==7.2.7",
+    "mongomock==4.1.2",
     "pep8-naming==0.13.3",
     "pip==23.1.2",
     "pipx==1.2.0",
