Use JS script for health check instead of curl.

--- a/components/frontend/Dockerfile
+++ b/components/frontend/Dockerfile
@@ -3,8 +3,6 @@ FROM node:18.16.0-alpine3.17
 LABEL maintainer="Quality-time team <quality-time@ictu.nl>"
 LABEL description="Quality-time frontend"
 
-RUN apk --no-cache add curl=8.1.2-r0
-
 WORKDIR /work
 COPY . /work
 RUN npm install -g npm@9.6.7 && \
@@ -12,7 +10,7 @@ RUN npm install -g npm@9.6.7 && \
     npm install -g serve@14.2.0 && \
     npm run build
 
-HEALTHCHECK CMD curl -f http://localhost:${FRONTEND_PORT:-5000}/favicon.ico || exit 1
+HEALTHCHECK CMD node /work/healthcheck.js
 
 # hadolint ignore=DL3025
 CMD serve --listen ${FRONTEND_PORT:-5000} --no-request-logging --single build
