--- a/openshift/helm/templates/collector-deployment.yaml
+++ b/openshift/helm/templates/collector-deployment.yaml
@@ -17,10 +17,8 @@ spec:
     spec:
       containers:
         - env:
-            - name: INTERNAL_SERVER_HOST
-              value: {{ .Values.internal_server.name }}
-            - name: INTERNAL_SERVER_PORT
-              value: "5002"
+            - name: DATABASE_URL
+              value: mongodb://root:root@{{ .Values.database.name }}:27017
           image: {{ .Values.collector.image }}
           imagePullPolicy: Always
           name: {{ .Values.collector.name }}
@@ -30,6 +28,5 @@ spec:
               drop:
                 - ALL
       restartPolicy: Always
-      imagePullSecrets: 
+      imagePullSecrets:
         - name: quality-time-pullsecret
-
