Adds call to database to fetch reports. (#6189)
* Squashed commits of feature:

- Adds mongomock to shared server code.
- Adds call to database to fetch reports.
- Adds check in __eq__ to see if instance of self
- Inserts measurment into database instead of posting to internal server
- Moves create_report to fixtures.
- Moves database code to shared.
- Notifier uses shared code
- Moves database code to shared.
- Removes duplicate
- Moves to new modules
- Sorting of imports
- Renames database method
- Changes import for collector
- Consolidates tests for measurements
- Removes superfluous code
- Use internal_server methods
- Removes dead code.
- Tests get method.
- Tests get method.
- Tests fixtures
- Fixes quality checks.
- Adds coverage on shared_data

* Exclude parts of collector in feature tests

* Update docker composition and documentation to reflect that the collector now talks to the database directly.

* Fix SonarQube issues.

* Exclude code from feature test coverage.

* Fix the collector Dockerfile.

* Don't initialize the database on every new connection.

* Remove dead code.

---------

Co-authored-by: Frank Niessink <frank@niessink.com>

--- a/components/collector/Dockerfile
+++ b/components/collector/Dockerfile
@@ -2,13 +2,16 @@ FROM python:3.11.3-alpine3.17 AS compile-image
 
 WORKDIR /home/collector
 
+RUN apk add --no-cache gcc=12.2.1_git20220924-r4 make=4.3-r1 libc-dev=0.7.2-r3 libffi-dev=3.4.4-r0
+# hadolint ignore=DL3059
 RUN python -m venv venv
 ENV PATH="/home/collector/venv/bin:$PATH"
 COPY collector/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
 COPY shared_data_model /home/shared_data_model/
+COPY shared_server_code /home/shared_server_code/
 COPY collector/requirements/requirements-internal.txt /requirements-internal.txt
-RUN pip install --no-cache-dir -r /requirements-internal.txt
+RUN pip install --no-cache-dir --use-pep517 -r /requirements-internal.txt
 
 FROM python:3.11.3-alpine3.17
 
@@ -26,6 +29,7 @@ HEALTHCHECK CMD python -c "from datetime import datetime as dt, timedelta, UTC; 
 COPY --from=compile-image /home/collector/venv /home/collector/venv
 COPY collector/src /home/collector
 COPY shared_data_model /home/shared_data_model
+COPY shared_server_code /home/shared_server_code
 
 ENV PATH="/home/collector/venv/bin:$PATH"
 CMD ["python", "/home/collector/quality_time_collector.py"]
