--- a/components/collector/pyproject.toml
+++ b/components/collector/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "beautifulsoup4==4.12.2",
     "defusedxml==0.7.1",
     "packaging==23.1",
+    "pymongo==4.3.3",
     "python-dateutil==2.8.2",
     "typing_extensions==4.6.3"
 ]
@@ -14,6 +15,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "coverage==7.2.7",
+    "mongomock==4.1.2",
     "pep8-naming==0.13.3",
     "pip==23.1.2",
     "pipx==1.2.0",
