--- a/tests/application_tests/pyproject.toml
+++ b/tests/application_tests/pyproject.toml
@@ -2,6 +2,7 @@
 name = "application_tests"
 version = "4.10.0"
 dependencies = [
+    "axe-selenium-python==2.1.6",
     "requests==2.31.0",
     "selenium==4.10.0"
 ]
