Update feature_tests to large resource class in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,8 @@ jobs:
           ./tests/feature_tests/ci/test.sh
       - store_artifacts:
           path: build
+    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    resource_class: large
 
 workflows:
   version: 2
@@ -107,11 +109,7 @@ workflows:
           context: QualityTime
       - docker/hadolint:
           context: QualityTime
-          dockerfiles: "components/collector/Dockerfile:\
-            components/database/Dockerfile:\
-            components/external_server/Dockerfile:\
-            components/frontend/Dockerfile:\
-            components/notifier/Dockerfile:\
-            components/proxy/Dockerfile:\
-            components/renderer/Dockerfile:\
-            components/testdata/Dockerfile"
+          dockerfiles: "components/collector/Dockerfile:components/database/Dockerfile:co\
+            mponents/external_server/Dockerfile:components/frontend/Dockerfile:\
+            components/notifier/Dockerfile:components/proxy/Dockerfile:componen\
+            ts/renderer/Dockerfile:components/testdata/Dockerfile"
