--- a/components/collector/Dockerfile
+++ b/components/collector/Dockerfile
@@ -9,7 +9,7 @@ ENV PATH="/home/collector/venv/bin:$PATH"
 COPY collector/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
 COPY shared_data_model /home/shared_data_model/
-COPY shared_server_code /home/shared_server_code/
+COPY shared_code /home/shared_code/
 COPY collector/requirements/requirements-internal.txt /requirements-internal.txt
 RUN pip install --no-cache-dir --use-pep517 -r /requirements-internal.txt
 
@@ -29,7 +29,7 @@ HEALTHCHECK CMD python -c "from datetime import datetime as dt, timedelta, UTC; 
 COPY --from=compile-image /home/collector/venv /home/collector/venv
 COPY collector/src /home/collector
 COPY shared_data_model /home/shared_data_model
-COPY shared_server_code /home/shared_server_code
+COPY shared_code /home/shared_code
 
 ENV PATH="/home/collector/venv/bin:$PATH"
 CMD ["python", "/home/collector/quality_time_collector.py"]
