--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -103,7 +103,7 @@ updates:
   open-pull-requests-limit: 100
 
 - package-ecosystem: pip
-  directory: "/components/shared_server_code"
+  directory: "/components/shared_code"
   schedule:
     interval: "daily"
   open-pull-requests-limit: 100
