Renamed `shared_server_code` to `shared_code`. Closes #6321.

--- a/components/api_server/Dockerfile
+++ b/components/api_server/Dockerfile
@@ -10,7 +10,7 @@ COPY api_server/requirements/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --require-hashes -r /requirements.txt
 COPY api_server/requirements/requirements-internal.txt /requirements-internal.txt
 COPY shared_data_model /home/shared_data_model/
-COPY shared_server_code /home/shared_server_code/
+COPY shared_code /home/shared_code/
 RUN pip install --no-cache-dir --use-pep517 -r /requirements-internal.txt
 
 FROM python:3.11.4-alpine3.17
@@ -26,7 +26,7 @@ USER server
 COPY --from=compile-image /home/server/venv /home/server/venv
 COPY api_server/src /home/server
 COPY shared_data_model /home/shared_data_model
-COPY shared_server_code /home/shared_server_code
+COPY shared_code /home/shared_code
 
 HEALTHCHECK CMD python /home/server/healthcheck.py
 
