--- a/components/collector/pyproject.toml
+++ b/components/collector/pyproject.toml
@@ -71,6 +71,13 @@ ignore = [
     "PT",      # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt - pytest isn't used
 ]
 
+[tool.ruff.isort]
+section-order = ["future", "standard-library", "third-party", "second-party", "first-party", "tests", "local-folder"]
+
+[tool.ruff.isort.sections]
+"second-party" = ["shared", "shared_data_model"]
+"tests" = ["tests"]
+
 [tool.ruff.per-file-ignores]
 ".vulture_ignore_list.py" = ["ALL"]
 "__init__.py" = [
