--- a/components/notifier/pyproject.toml
+++ b/components/notifier/pyproject.toml
@@ -57,10 +57,11 @@ ignore = [
 ]
 
 [tool.ruff.isort]
-section-order = ["future", "standard-library", "third-party", "second-party", "first-party", "local-folder"]
+section-order = ["future", "standard-library", "third-party", "second-party", "first-party", "tests", "local-folder"]
 
 [tool.ruff.isort.sections]
 "second-party" = ["shared", "shared_data_model"]
+"tests" = ["tests"]
 
 [tool.ruff.per-file-ignores]
 ".vulture_ignore_list.py" = ["ALL"]
