--- a/tests/feature_tests/requirements/requirements-dev.txt
+++ b/tests/feature_tests/requirements/requirements-dev.txt
@@ -379,6 +379,7 @@ packaging==23.1 \
     #   build
     #   pipx
 parse==1.19.0 \
+    --hash=sha256:6ce007645384a91150cb7cd7c8a9db2559e273c2e2542b508cd1e342508c2601 \
     --hash=sha256:9ff82852bcb65d139813e2a5197627a94966245c897796760a3a2a8eb66f020b
     # via
     #   behave
