--- a/tests/feature_tests/requirements/requirements.txt
+++ b/tests/feature_tests/requirements/requirements.txt
@@ -218,6 +218,7 @@ idna==3.4 \
     --hash=sha256:90b77e79eaa3eba6de819a0c442c0b4ceefc341a7a2ab77d7562bf49f425c5c2
     # via requests
 parse==1.19.0 \
+    --hash=sha256:6ce007645384a91150cb7cd7c8a9db2559e273c2e2542b508cd1e342508c2601 \
     --hash=sha256:9ff82852bcb65d139813e2a5197627a94966245c897796760a3a2a8eb66f020b
     # via
     #   behave
