--- a/components/shared_code/pyproject.toml
+++ b/components/shared_code/pyproject.toml
@@ -82,8 +82,8 @@ classmethod-decorators = ["classmethod", "pydantic.validator"]
     "D104",  # https://beta.ruff.rs/docs/rules/#pydocstyle-d - don't require doc strings in __init__.py files
     "F401",  # https://beta.ruff.rs/docs/rules/#pyflakes-f - imports in __init__.py files are used to flatten the module hierarchy
 ]
-"src/quality_time_notifier.py" = [
-    "INP001",  # https://beta.ruff.rs/docs/rules/implicit-namespace-package/ - false positive because this is the main script
+"src/shared_data_model/**/*.py" = [
+    "RUF012",  # https://beta.ruff.rs/docs/rules/mutable-class-default/ - Pydantic models' class attributes are used to specify instance attributes
 ]
 "tests/**/*.py" = [
     "ANN201",  # https://beta.ruff.rs/docs/rules/missing-return-type-undocumented-public-function/ - don't require test functions to have return types
