--- a/components/shared_code/pyproject.toml
+++ b/components/shared_code/pyproject.toml
@@ -21,10 +21,10 @@ dev = [
 tools = [
     "bandit==1.7.5",
     "black==23.3.0",
-    "mypy==1.3.0",
+    "mypy==1.4.0",
     "pip-audit==2.5.6",
     "pydantic==1.10.9",
-    "ruff==0.0.272",
+    "ruff==0.0.273",
     "safety==2.3.5",
     "vulture==2.7"
 ]
@@ -82,8 +82,8 @@ classmethod-decorators = ["classmethod", "pydantic.validator"]
     "D104",  # https://beta.ruff.rs/docs/rules/#pydocstyle-d - don't require doc strings in __init__.py files
     "F401",  # https://beta.ruff.rs/docs/rules/#pyflakes-f - imports in __init__.py files are used to flatten the module hierarchy
 ]
-"src/quality_time_notifier.py" = [
-    "INP001",  # https://beta.ruff.rs/docs/rules/implicit-namespace-package/ - false positive because this is the main script
+"src/shared_data_model/**/*.py" = [
+    "RUF012",  # https://beta.ruff.rs/docs/rules/mutable-class-default/ - Pydantic models' class attributes are used to specify instance attributes
 ]
 "tests/**/*.py" = [
     "ANN201",  # https://beta.ruff.rs/docs/rules/missing-return-type-undocumented-public-function/ - don't require test functions to have return types
