--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3.5.3
       - name: Run application tests
         env:
-          QUALITY_TIME_VERSION: v4.10.0
+          QUALITY_TIME_VERSION: v5.0.0-rc.1
           ENV: ci
         run: |
           mkdir -p build
