--- a/components/collector/pyproject.toml
+++ b/components/collector/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "collector"
-version = "4.10.0"
+version = "5.0.0-rc.1"
 dependencies = [
     "aiogqlc==3.1.0",
     "aiohttp==3.8.4",
