--- a/tests/application_tests/pyproject.toml
+++ b/tests/application_tests/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "application_tests"
-version = "4.10.0"
+version = "5.0.0-rc.1"
 dependencies = [
     "axe-selenium-python==2.1.6",
     "requests==2.31.0",
