--- a/tests/feature_tests/pyproject.toml
+++ b/tests/feature_tests/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "feature_tests"
-version = "4.10.0"
+version = "5.0.0-rc.1"
 dependencies = [
     "asserts==0.12.0",
     "behave==1.2.6",
