--- a/components/shared_code/pyproject.toml
+++ b/components/shared_code/pyproject.toml
@@ -6,7 +6,8 @@ dependencies = [
     "cryptography==41.0.1",
     "packaging==23.1",
     "pydantic==1.10.9",
-    "pymongo==4.4.0"
+    "pymongo==4.4.0",
+    "python-dateutil==2.8.2",
 ]
 
 [project.optional-dependencies]
@@ -16,6 +17,7 @@ dev = [
     "pip==23.1.2",
     "pipx==1.2.0",
     "pip-tools==6.13.0",  # To add hashes to requirements
+    "types-python-dateutil==2.8.19.13",
     "unittest-xml-reporting==3.2.0",  # Needed to generate JUnit XML output for Sonarcloud.io
 ]
 tools = [
