--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -8,14 +8,15 @@
     "fomantic-ui-css": "^2.9.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.5",
     "react-grid-layout": "^1.3.4",
     "react-hash-link": "1.0.2",
-    "react-semantic-ui-datepickers": "^2.17.2",
+    "react-is": "^18.2.0",
     "react-timeago": "^7.1.0",
     "react-toastify": "^9.1.3",
-    "semantic-ui-react": "^2.1.3",
+    "semantic-ui-react": "^2.1.4",
     "victory": "^36.6.11"
   },
   "scripts": {
