--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "docs"
-version = "5.0.1"
+version = "5.1.0-rc.1"
 dependencies = [
     "furo==2023.7.26",
     "gitpython==3.1.32",
