--- a/components/api_server/pyproject.toml
+++ b/components/api_server/pyproject.toml
@@ -69,7 +69,8 @@ ignore = [
     "D203",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
     "D213",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
     "FBT",     # https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
-    "I001",    # https://beta.ruff.rs/docs/rules/unsorted-imports/ - (probably) because ruff is run with pipx it cann't differentiate between dependencies and modules
+    "I001",    # https://beta.ruff.rs/docs/rules/unsorted-imports/ - (probably) because ruff is run with pipx it can't differentiate between dependencies and modules
+    "PD",      # https://beta.ruff.rs/docs/rules/#pandas-vet-pd - pandas isn't used
     "PT",      # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt - pytest isn't used
 ]
 
