--- a/components/notifier/pyproject.toml
+++ b/components/notifier/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "notifier"
-version = "5.1.0-rc.3"
+version = "5.1.0"
 dependencies = [
     "aiohttp==3.8.5",
     "pymsteams==0.2.2"
