--- a/components/shared_code/pyproject.toml
+++ b/components/shared_code/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "shared_code"
-version = "5.1.0-rc.3"
+version = "5.1.0"
 dependencies = [
     "bottle==0.12.25",
     "cryptography==41.0.3",
