--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "docs"
-version = "5.1.0-rc.3"
+version = "5.1.0"
 dependencies = [
     "furo==2023.8.19",
     "gitpython==3.1.34",
